--- a/src/components/packages.yml
+++ b/src/components/packages.yml
@@ -25,7 +25,7 @@ hipanel-module-client:
     forks: 2
     stars: 3
     watchers: 3
-    issues: 1
+    issues: 0
 hipanel-module-domain:
     name: hipanel-module-domain
     description: 'Domain Plugin for HiPanel'
@@ -631,10 +631,10 @@ hipanel-domain-checker:
 asset-packagist:
     name: asset-packagist
     description: 'Asset Packagist'
-    forks: 16
-    stars: 137
-    watchers: 137
-    issues: 13
+    forks: 15
+    stars: 138
+    watchers: 138
+    issues: 12
 hipanel-rbac:
     name: hipanel-rbac
     description: 'RBAC implementation for HiPanel'
@@ -968,8 +968,8 @@ php-billing:
     name: php-billing
     description: 'PHP Billing Library'
     forks: 0
-    stars: 6
-    watchers: 6
+    stars: 7
+    watchers: 7
     issues: 0
 php-units:
     name: php-units
@@ -1054,7 +1054,7 @@ asset-packagist.dev:
     forks: 2
     stars: 4
     watchers: 4
-    issues: 0
+    issues: 1
 yii2-hiart-librariesio:
     name: yii2-hiart-librariesio
     description: 'Libraries.io API implementation for yii2-hiart'
@@ -1159,4 +1159,11 @@ hiapi-legacy:
     forks: 0
     stars: 0
     watchers: 0
+    issues: 0
+hiapi-fetchmail:
+    name: hiapi-fetchmail
+    description: 'hiAPI Fetchmail plugin'
+    forks: 1
+    stars: 2
+    watchers: 2
     issues: 0
