--- a/src/components/packages.yml
+++ b/src/components/packages.yml
@@ -1,9 +1,9 @@
 hipanel-core:
     name: hipanel-core
     description: 'HiPanel core package'
-    forks: 9
-    stars: 20
-    watchers: 20
+    forks: 8
+    stars: 21
+    watchers: 21
     issues: 1
 yii2-higrid:
     name: yii2-higrid
@@ -16,13 +16,13 @@ yii2-thememanager:
     name: yii2-thememanager
     description: 'Theme Manager for Yii 2'
     forks: 1
-    stars: 11
-    watchers: 11
+    stars: 12
+    watchers: 12
     issues: 0
 hipanel-module-client:
     name: hipanel-module-client
     description: 'Client Plugin for HiPanel'
-    forks: 4
+    forks: 3
     stars: 4
     watchers: 4
     issues: 0
@@ -30,16 +30,16 @@ hipanel-module-domain:
     name: hipanel-module-domain
     description: 'Domain Plugin for HiPanel'
     forks: 2
-    stars: 2
-    watchers: 2
+    stars: 3
+    watchers: 3
     issues: 0
 hipanel-module-finance:
     name: hipanel-module-finance
     description: 'Finance Plugin for HiPanel'
-    forks: 4
+    forks: 3
     stars: 6
     watchers: 6
-    issues: 0
+    issues: 1
 hipanel-module-ticket:
     name: hipanel-module-ticket
     description: 'Ticket Plugin for HiPanel'
@@ -85,7 +85,7 @@ hidev:
 hipanel-module-dashboard:
     name: hipanel-module-dashboard
     description: 'Dashboard Plugin for HiPanel'
-    forks: 2
+    forks: 1
     stars: 3
     watchers: 3
     issues: 0
@@ -149,8 +149,8 @@ yii2-hiart:
     name: yii2-hiart
     description: 'ActiveRecord for API'
     forks: 11
-    stars: 39
-    watchers: 39
+    stars: 41
+    watchers: 41
     issues: 3
 yii2-asset-adminlte:
     name: yii2-asset-adminlte
@@ -176,9 +176,9 @@ hipanel-theme-adminlte1:
 yii2-theme-adminlte:
     name: yii2-theme-adminlte
     description: 'AdminLte Theme for hiqdev/yii2-thememanager'
-    forks: 3
-    stars: 6
-    watchers: 6
+    forks: 2
+    stars: 8
+    watchers: 8
     issues: 0
 yii2-bootstrap-switch:
     name: yii2-bootstrap-switch
@@ -225,9 +225,9 @@ hidev-travis:
 hiam:
     name: hiam
     description: 'Identity and Access Management server providing OAuth2, multi-factor authentication and more'
-    forks: 4
-    stars: 10
-    watchers: 10
+    forks: 3
+    stars: 11
+    watchers: 11
     issues: 0
 yii2-hiam-authclient:
     name: yii2-hiam-authclient
@@ -239,7 +239,7 @@ yii2-hiam-authclient:
 hipanel:
     name: hipanel
     description: 'Control panel for hosting, domains and more'
-    forks: 10
+    forks: 9
     stars: 6
     watchers: 6
     issues: 0
@@ -247,9 +247,9 @@ hipanel-module-stock:
     name: hipanel-module-stock
     description: 'Stock Module for Hipanel'
     forks: 3
-    stars: 2
-    watchers: 2
-    issues: 1
+    stars: 3
+    watchers: 3
+    issues: 0
 yii2-asset-pnotify:
     name: yii2-asset-pnotify
     description: null
@@ -288,9 +288,9 @@ py-chkipper:
 heppy:
     name: heppy
     description: 'Python EPP client and library'
-    forks: 1
-    stars: 7
-    watchers: 7
+    forks: 2
+    stars: 8
+    watchers: 8
     issues: 0
 reodb:
     name: reodb
@@ -337,14 +337,14 @@ php-merchant:
 yii2-merchant:
     name: yii2-merchant
     description: 'Payment merchants extension for Yii2'
-    forks: 3
-    stars: 14
-    watchers: 14
+    forks: 2
+    stars: 15
+    watchers: 15
     issues: 1
 yii2-cart:
     name: yii2-cart
     description: 'Cart module for Yii2'
-    forks: 4
+    forks: 3
     stars: 11
     watchers: 11
     issues: 0
@@ -352,8 +352,8 @@ omnipay-paypal:
     name: omnipay-paypal
     description: 'PayPal plugin for PHP merchant library'
     forks: 1
-    stars: 3
-    watchers: 3
+    stars: 4
+    watchers: 4
     issues: 0
 omnipay-ecoin:
     name: omnipay-ecoin
@@ -365,7 +365,7 @@ omnipay-ecoin:
 omnipay-epayments:
     name: omnipay-epayments
     description: 'ePayments driver for Omnipay payment processing library'
-    forks: 1
+    forks: 2
     stars: 3
     watchers: 3
     issues: 0
@@ -407,7 +407,7 @@ omnipay-qiwi:
 omnipay-robokassa:
     name: omnipay-robokassa
     description: 'RoboKassa plugin for PHP merchant library'
-    forks: 4
+    forks: 5
     stars: 5
     watchers: 5
     issues: 1
@@ -625,15 +625,15 @@ asset-packagist:
     name: asset-packagist
     description: 'Asset Packagist'
     forks: 15
-    stars: 172
-    watchers: 172
+    stars: 173
+    watchers: 173
     issues: 18
 hipanel-rbac:
     name: hipanel-rbac
     description: 'RBAC implementation for HiPanel'
     forks: 3
-    stars: 2
-    watchers: 2
+    stars: 4
+    watchers: 4
     issues: 0
 hisite-module-news:
     name: hisite-module-news
@@ -659,10 +659,10 @@ hidev-nginx:
 composer-config-plugin:
     name: composer-config-plugin
     description: 'Composer plugin for config assembling'
-    forks: 7
-    stars: 39
-    watchers: 39
-    issues: 2
+    forks: 9
+    stars: 44
+    watchers: 44
+    issues: 7
 hidev-hiqdev:
     name: hidev-hiqdev
     description: 'HiQDev vendor configuration for HiDev'
@@ -702,15 +702,15 @@ hisite:
     name: hisite
     description: 'Hisite Yii2 base project'
     forks: 1
-    stars: 7
-    watchers: 7
+    stars: 8
+    watchers: 8
     issues: 0
 yii2-theme-flat:
     name: yii2-theme-flat
     description: 'Flat Theme for Yii2 projects'
     forks: 1
-    stars: 5
-    watchers: 5
+    stars: 6
+    watchers: 6
     issues: 0
 yii2-theme-twentyfifteen:
     name: yii2-theme-twentyfifteen
@@ -751,8 +751,8 @@ hisite-template:
     name: hisite-template
     description: 'HiSite Project Template'
     forks: 1
-    stars: 9
-    watchers: 9
+    stars: 10
+    watchers: 10
     issues: 0
 yii2-theme-agency:
     name: yii2-theme-agency
@@ -806,9 +806,9 @@ hiam-mrdp:
 yii2-mfa:
     name: yii2-mfa
     description: 'Yii2 module providing multi-factor authentication'
-    forks: 5
-    stars: 4
-    watchers: 4
+    forks: 4
+    stars: 6
+    watchers: 6
     issues: 1
 hipanel-com:
     name: hipanel-com
@@ -820,14 +820,14 @@ hipanel-com:
 hiam-template:
     name: hiam-template
     description: 'Identity and Access Management server providing OAuth2, RBAC, multi-factor authentication and more'
-    forks: 0
+    forks: 1
     stars: 2
     watchers: 2
     issues: 0
 hipanel-module-document:
     name: hipanel-module-document
     description: null
-    forks: 2
+    forks: 1
     stars: 2
     watchers: 2
     issues: 0
@@ -953,7 +953,7 @@ yii2-asset-select2:
 hipanel-module-certificate:
     name: hipanel-module-certificate
     description: 'SSL certificates module for HiPanel'
-    forks: 3
+    forks: 2
     stars: 4
     watchers: 4
     issues: 0
@@ -961,8 +961,8 @@ php-billing:
     name: php-billing
     description: 'PHP Billing Library'
     forks: 2
-    stars: 10
-    watchers: 10
+    stars: 12
+    watchers: 12
     issues: 0
 php-units:
     name: php-units
@@ -995,7 +995,7 @@ hiapi:
 billing-hiapi:
     name: billing-hiapi
     description: 'API for Billing'
-    forks: 3
+    forks: 2
     stars: 4
     watchers: 4
     issues: 0
@@ -1045,8 +1045,8 @@ asset-packagist.dev:
     name: asset-packagist.dev
     description: 'Root project for Asset Packagist'
     forks: 2
-    stars: 8
-    watchers: 8
+    stars: 9
+    watchers: 9
     issues: 1
 yii2-hiart-librariesio:
     name: yii2-hiart-librariesio
@@ -1093,7 +1093,7 @@ hiapi-directi:
 hipanel-module-integrations:
     name: hipanel-module-integrations
     description: 'Integrations management plugin for HiPanel'
-    forks: 1
+    forks: 0
     stars: 3
     watchers: 3
     issues: 0
@@ -1101,8 +1101,8 @@ omnipay-bitpay:
     name: omnipay-bitpay
     description: null
     forks: 0
-    stars: 2
-    watchers: 2
+    stars: 6
+    watchers: 6
     issues: 0
 yii2-cookie-consent:
     name: yii2-cookie-consent
@@ -1143,8 +1143,8 @@ yii2-data-mapper:
     name: yii2-data-mapper
     description: 'Data Mapper for Yii2'
     forks: 0
-    stars: 5
-    watchers: 5
+    stars: 6
+    watchers: 6
     issues: 1
 hiapi-fetchmail:
     name: hiapi-fetchmail
@@ -1191,7 +1191,7 @@ hifile-api:
 yii2-daterangepicker:
     name: yii2-daterangepicker
     description: 'Date Range Picker widget for Yii2'
-    forks: 1
+    forks: 0
     stars: 6
     watchers: 6
     issues: 0
@@ -1219,6 +1219,20 @@ easygo-hipanel:
 catcher:
     name: catcher
     description: Catcher
+    forks: 0
+    stars: 1
+    watchers: 1
+    issues: 0
+hiapi-nicru:
+    name: hiapi-nicru
+    description: 'hiAPI NIC.ru plugin'
+    forks: 1
+    stars: 2
+    watchers: 2
+    issues: 0
+hiapi-heppy:
+    name: hiapi-heppy
+    description: 'hiAPI plugin for hEPPy'
     forks: 0
     stars: 1
     watchers: 1
